# TBATsim

./: .gitignore  CMakeLists.txt  MCU-def.md  README.md  Terms.md
Core/: Types.h  exceptions.h  trit.h
Core/src/: Core.cpp  Types.cpp  trit.cpp
Core/tests/: CMakeLists.txt  Types-UT.cpp  main.cpp  trit-UT.cpp  tryte-UT.cpp
Fundamental/: CMakeLists.txt  trit.h  tryte.h
Fundamental/src/: trit.cpp  tryte.cpp
Fundamental/tests/: trit-UT.cpp  tryte-UT.cpp
Utilities/: CMakeLists.txt  convert.h
Utilities/src/: convert.cpp
Utilities/tests/: CMakeLists.txt  convert-UT.cpp
doc/: MCU-def.md  Terms.md
